# better-twitter-archiver

./: Cargo.toml  Rocket.toml  build.sh  conversation.json  conversations.json  conversations.ron  tweets.json  tweets.ron  user.json  user.ron
data/: conversations.ron  tweets.ron  user-conversations_yudapearl.ron  user-info_dkedmey.ron  user-info_yudapearl.ron  user-tweets_yudapearl.ron  users.ron
src/: app.rs  main.rs
src/app/: api.rs  io.rs
src/app/io/: read.rs  write.rs
