[package]
name = "better-twitter-archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitter-v2 = "0.1.4"
dotenvy = "0.15.1"
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
serde = "1.0.136"
serde_json ="1"